--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,13 @@ nav h6 {
     height: 100%;
 }
 
+@media (max-width: 2000px) {
+    .profile-intro-img-wrapper {
+        height: 450px;
+        width: 350px;
+    }
+}
+
 @media (max-width: 1200px) {
     .profile-intro-img-wrapper {
         height: 400px;
